fixed navbar and UI alignment

--- a/skillsync/src/components/CourseItem.css
+++ b/skillsync/src/components/CourseItem.css
@@ -1,17 +1,25 @@
 .course-grid-item {
     align-items: center; 
     border: 1px solid #ccc;
-    border-radius: 4px;
-    margin:20px;
-    padding:20px;
+    border-radius: 10px;
+    padding: 16px;
+    margin-top:16px;
     background-color: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; 
+
 }
 
+.course-grid-item:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 
+}
 
   .course-grid-item img {
     border-radius: 10%;
     margin-right: 16px; 
-
+    width:150px;
+    height:auto;
   }
